--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <div class="container">
+        <div class="card">
+          <div class="img">
+            <img src="./images/image-equilibrium.jpg" alt="" />
+          </div>
+          <div class="info">
+            <div class="title">
+              <h1>Equilibrium #3429</h1>
+            </div>
+            <div class="description">
+              <p>Our Equilibrium collection promotes balance and calm.</p>
+            </div>
+            <div class="crypto">
+              <div class="icon-text">
+                <div class="icon">
+                  <img src="./images/icon-ethereum.svg" alt="ethereum" />
+                </div>
+                <div class="text">
+                  <p>0.041 ETH</p>
+                </div>
+              </div>
+              <div class="clock-text">
+                <div class="icon">
+                  <img src="./images/icon-clock.svg" alt="clock" />
+                </div>
+                <div class="text">
+                  <p>3 days left</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
