--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png" />
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -15,12 +21,22 @@
     <main>
       <div class="container">
         <div class="card">
-          <div class="img">
-            <img src="./images/image-equilibrium.jpg" alt="" />
-          </div>
+          <a href="#">
+            <div class="img">
+              <div class="hover">
+                <div class="overlay"></div>
+                <div class="eye">
+                  <img src="./images/icon-view.svg" alt="" />
+                </div>
+              </div>
+              <img src="./images/image-equilibrium.jpg" alt="" />
+            </div>
+          </a>
           <div class="info">
             <div class="title">
-              <h1>Equilibrium #3429</h1>
+              <h1>
+                <a href="#">Equilibrium #3429</a>
+              </h1>
             </div>
             <div class="description">
               <p>Our Equilibrium collection promotes balance and calm.</p>
@@ -28,19 +44,59 @@
             <div class="crypto">
               <div class="icon-text">
                 <div class="icon">
-                  <img src="./images/icon-ethereum.svg" alt="ethereum" />
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="11"
+                    height="18"
+                    viewBox="0 0 11 18"
+                    fill="none">
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M5.5 0L10.9961 9.16875L5.5 12.4312L0 9.16875L5.5 0ZM11 10.2165L5.5 18L0 10.2165L5.5 13.479L11 10.2165Z"
+                      fill="#00FFF8" />
+                  </svg>
                 </div>
                 <div class="text">
-                  <p>0.041 ETH</p>
+                  <p><span class="price">0.041</span> ETH</p>
                 </div>
               </div>
               <div class="clock-text">
                 <div class="icon">
-                  <img src="./images/icon-clock.svg" alt="clock" />
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="17"
+                    height="17"
+                    viewBox="0 0 17 17"
+                    fill="none">
+                    <rect
+                      opacity="0.01"
+                      x="16.305"
+                      y="16.6739"
+                      width="16"
+                      height="16"
+                      transform="rotate(180 16.305 16.6739)"
+                      fill="black" />
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M1.63834 8.67388C1.63834 4.99199 4.6231 2.00722 8.305 2.00722C10.0731 2.00722 11.7688 2.7096 13.019 3.95984C14.2693 5.21008 14.9717 6.90577 14.9717 8.67388C14.9717 12.3558 11.9869 15.3406 8.305 15.3406C4.6231 15.3406 1.63834 12.3558 1.63834 8.67388ZM8.305 9.34055H10.9717C11.3399 9.34055 11.6383 9.04207 11.6383 8.67388C11.6383 8.30569 11.3399 8.00722 10.9717 8.00722H8.97167V6.00722C8.97167 5.63903 8.67319 5.34055 8.305 5.34055C7.93681 5.34055 7.63834 5.63903 7.63834 6.00722V8.67388C7.63834 9.04207 7.93681 9.34055 8.305 9.34055Z"
+                      fill="#8BACD9" />
+                  </svg>
                 </div>
                 <div class="text">
-                  <p>3 days left</p>
+                  <p><span class="days">3</span> days left</p>
                 </div>
+              </div>
+            </div>
+            <div class="avatar">
+              <div class="img-avatar">
+                <img src="./images/image-avatar.png" alt="image-avatar" />
+              </div>
+              <div class="name-avatar">
+                <p>
+                  Creation of <a href="#" class="custom-text">Jules Wyvern</a>
+                </p>
               </div>
             </div>
           </div>
