--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
     <header></header>
