--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <div class="container">
         <div class="card">
-          <a href="#">
+          <a href="index.html">
             <div class="img">
               <div class="hover">
                 <div class="overlay"></div>
@@ -36,7 +36,7 @@
           <div class="info">
             <div class="title">
               <h1>
-                <a href="#">Equilibrium #3429</a>
+                <a href="index.html">Equilibrium #3429</a>
               </h1>
             </div>
             <div class="description">
@@ -96,7 +96,8 @@
               </div>
               <div class="name-avatar">
                 <p>
-                  Creation of <a href="#" class="custom-text">Jules Wyvern</a>
+                  Creation of
+                  <a href="index.html" class="custom-text">Jules Wyvern</a>
                 </p>
               </div>
             </div>
